--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ body {
 	margin: 5px -95px 5px -95px;
 }
 
-.character-zone{
+.character-zonerow{
 	position: relative;
 	width: 340px;
 	height: 115px;
@@ -112,8 +112,9 @@ body {
 	height: 105px;
 	left: 95px;
 	margin-right: 190px;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
 	box-sizing: border-box;
-	border: 1px solid black;
 	background-image: url("../img/tiles/cardzone.png");
 	-moz-box-sizing:border-box;
 	-webkit-box-sizing:border-box;
@@ -124,7 +125,8 @@ body {
 	float: left;
 	width: 75px;
 	height: 105px;
-	border: 1px solid black;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
 	margin: 5px 10px 5px 10px;
 	background-image: url("../img/tiles/cardzone.png");
 	-moz-box-sizing:border-box;
@@ -137,7 +139,6 @@ body {
 	height:105px;
 	font-size: .9em;
 	position: relative;
-	top: -1px;
 	left: -1px;
 	float: left;
 	box-sizing:border-box;
@@ -160,8 +161,9 @@ body {
 	height:105px;
 	float: left;
 	margin: 0px 5px 0px 5px;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
 	box-sizing:border-box;
-	border: 1px solid black;
 	background-image: url("../img/tiles/cardzone.png");
 	-moz-box-sizing:border-box;
 	-webkit-box-sizing:border-box;
@@ -177,7 +179,6 @@ body {
 .game-hand{
 	height: 105px;
 	width: auto;
-	display: block;
 	position: relative;
 	margin: 0px auto 0px auto;
 }
