--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,12 @@ body {
 	transform:translateX(-50%);
 }
 
+.tapped{
+    -ms-transform: rotate(90deg); /* IE 9 */
+    -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+    transform: rotate(90deg);
+}
+
 .zonerow{
 	min-width: 640px;
 }
