--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,10 @@ body {
 	box-shadow: 4px 4px 2px 0px rgba(0,0,0,0.6);
 }
 
+.manaslot{
+
+}
+
 .specialzone{
 	position: relative;
 	float: left;
